addons/opa-gatekeeper/privilege-escalation/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPrivilegeEscalation
metadata:
  name: disable-privilege-escalation
spec:
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - "Pod"
    excludedNamespaces:
      - "kube-system"
      - "rafay-infra"
      - "rafay-system"
